--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     
     <div id="container">
         <div id="cabecera">
-            cabecera
+            hyperblog
+            <span id="tagline">tu blog de confianza</span>
         </div>
         <div id="post">
 
