--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
             <h1> Aqui vamos a hacer un blog post</h1>
             <p>este es el parrafo pricipal donde vamos a ecribir varias ideas importantes</p>
+            <p>los blogs son la mejor forma de compartir a informacion y tus ideas. mucho mas que ir a conferencias o salir en youtube. excepto si eres u rockstar. pero estadisticamenete no lo eres .... por ahora</p>
 
         </div>
 
