cambie cabecera master y agregue parrafo

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <div id="container">
         <div id="cabecera">
             hyperblog
-            <span id="tagline">tu blog de confianza</span>
+            <span id="tagline">tu blog maestro</span>
         </div>
         <div id="post">
 
             <h1> Aqui vamos a hacer un blog post</h1>
             <p>este es el parrafo pricipal donde vamos a ecribir varias ideas importantes</p>
             <p>los blogs son la mejor forma de compartir a informacion y tus ideas. mucho mas que ir a conferencias o salir en youtube. excepto si eres u rockstar. pero estadisticamenete no lo eres .... por ahora</p>
+            <p>este parrafo se lo agregue en el master sucrbete y dale like </p>
+            
 
         </div>
 
